# IAP2020

./: README.md
task2/: .gitignore  CMakeLists.txt  README.md  decode.cpp  encode.cpp
task2/results/Boat[R=4,FastMode]/: encoded.frac  metrics_0.txt  metrics_1.txt  metrics_2.txt  metrics_3.txt  metrics_4.txt  metrics_5.txt  metrics_6.txt  metrics_7.txt
task2/results/Boat[R=4]/: encoded.frac  metrics_0.txt  metrics_1.txt  metrics_2.txt  metrics_3.txt  metrics_4.txt  metrics_5.txt  metrics_6.txt  metrics_7.txt
task2/results/Boat[R=8,FastMode]/: encoded.frac  metrics_0.txt  metrics_1.txt  metrics_2.txt  metrics_3.txt  metrics_4.txt  metrics_5.txt  (+2 more)
task2/source_code/: compressor.cpp  decompressor.cpp  fractal.h  image.cpp  image.h
task3/: .gitignore  CMakeLists.txt  README.md  main.cpp
task3/results/: 0001.tiff  0025.tiff  0026.tiff  0027.tiff  IMG_0295.tiff  IMG_0531.tiff  IMG_0532.tiff  IMG_0533.tiff  IMG_0534.tiff  IMG_0535.tiff  IMG_0536.tiff  IMG_0538.tiff  IMG_0539.tiff  IMG_0540.tiff  IMG_1566.tiff
task3/results_minmed/: 0001.tiff  0025.tiff  0026.tiff  0027.tiff  IMG_0295.tiff  IMG_0531.tiff  IMG_0532.tiff  IMG_0533.tiff  IMG_0534.tiff  IMG_0535.tiff  IMG_0536.tiff  IMG_0538.tiff  IMG_0539.tiff  IMG_0540.tiff  IMG_1566.tiff
task3/results_with_sep_levels/: 0001.tiff  0025.tiff  0026.tiff  0027.tiff  IMG_0295.tiff  IMG_0531.tiff  IMG_0532.tiff  IMG_0533.tiff  IMG_0534.tiff  IMG_0535.tiff  IMG_0536.tiff  IMG_0538.tiff  IMG_0539.tiff  IMG_0540.tiff  IMG_1566.tiff
task3/source_code/: binarizer.cpp  binarizer.h  bw_image.cpp  image.cpp  image.h
(+129 files in other folders)
